# fed-har

./: .gitignore  CLAUDE.md  LICENSE  README.md  fed-har.code-workspace  pyproject.toml
checkpoints/lfr/: lfr_backbone.pt
logs/eval/baseline_finetune_100spc/version_0/: metrics.csv
logs/eval/baseline_finetune_10spc/version_0/: metrics.csv
logs/eval/baseline_finetune_1spc/version_0/: metrics.csv
logs/eval/baseline_finetune_20spc/version_0/: metrics.csv
logs/eval/baseline_finetune_allspc/version_0/: metrics.csv
logs/eval/baseline_linear_100spc/version_0/: metrics.csv
logs/eval/baseline_linear_10spc/version_0/: metrics.csv
logs/eval/baseline_linear_1spc/version_0/: metrics.csv
logs/eval/baseline_linear_20spc/version_0/: metrics.csv
logs/eval/baseline_linear_allspc/version_0/: metrics.csv
logs/eval/lfr_full_finetune_100spc/version_0/: metrics.csv
logs/eval/lfr_full_finetune_10spc/version_0/: metrics.csv
logs/eval/lfr_full_finetune_1spc/version_0/: metrics.csv
logs/eval/lfr_full_finetune_20spc/version_0/: metrics.csv
logs/eval/lfr_full_finetune_allspc/version_0/: metrics.csv
logs/eval/lfr_linear_eval_100spc/version_0/: metrics.csv
logs/eval/lfr_linear_eval_100spc_seed0/version_0/: metrics.csv
logs/eval/lfr_linear_eval_100spc_seed1/version_0/: metrics.csv
logs/lfr/version_0/: metrics.csv
notebooks/: HAR_tutorial.ipynb  lfr_evaluation_results.ipynb  lfr_har_test.ipynb  lfr_metrics_visualization.ipynb
results/: lfr_eval_results.csv
scripts/: eval_lfr.py  run_all_eval_tmux.sh  run_lfr_tmux.sh  train_lfr.py  train_supervised.py
(+23 files in other folders)
