[tool.poetry]
[project]
name = "fed-har"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "mi"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "minerva-ml (>=0.3.8b0,<0.4.0)",
    "ipywidgets (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
